WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209616
[StressGC] ASSERTION FAILED: m_wrapper under WebCore::HTMLMediaElement::dispatchEvent
https://bugs.webkit.org/show_bug.cgi?id=209616
Summary
[StressGC] ASSERTION FAILED: m_wrapper under WebCore::HTMLMediaElement::dispa...
Chris Dumez
Reported
2020-03-26 13:16:15 PDT
[StressGC] ASSERTION FAILED: m_wrapper under WebCore::HTMLMediaElement::dispatchEvent: ASSERTION FAILED: m_wrapper ./bindings/js/JSEventListener.h(123) : JSC::JSObject *WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext &) const 1 0x106bf70b9 WTFCrash 2 0x11d80388b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11f9be9f8 WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext&) const 4 0x11f9bdd1b WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 5 0x12000b87c WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::DumbPtrTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 6 0x120007b12 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 7 0x1200834ba WebCore::Node::handleLocalEvents(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 8 0x11fff6180 WebCore::EventContext::handleLocalEvents(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) const 9 0x11fff6b97 WebCore::dispatchEventInDOM(WebCore::Event&, WebCore::EventPath const&) 10 0x11fff6795 WebCore::EventDispatcher::dispatchEvent(WebCore::Node&, WebCore::Event&) 11 0x12008350d WebCore::Node::dispatchEvent(WebCore::Event&) 12 0x1203eeb31 WebCore::HTMLMediaElement::dispatchEvent(WebCore::Event&) 13 0x120426b95 WebCore::HTMLMediaElement::setIsPlayingToWirelessTarget(bool)::$_35::operator()() const 14 0x120426999 WTF::Detail::CallableWrapper<WebCore::HTMLMediaElement::setIsPlayingToWirelessTarget(bool)::$_35, void>::call() 15 0x11d8110fa WTF::Function<void ()>::operator()() const 16 0x11dad3a20 WebCore::GenericTaskQueue<WebCore::Timer>::enqueueTask(WTF::Function<void ()>&&)::'lambda'()::operator()() const 17 0x11dad3869 WTF::Detail::CallableWrapper<WebCore::GenericTaskQueue<WebCore::Timer>::enqueueTask(WTF::Function<void ()>&&)::'lambda'(), void>::call() 18 0x11d8110fa WTF::Function<void ()>::operator()() const 19 0x120dc071e WebCore::TaskDispatcher<WebCore::Timer>::dispatchOneTask() 20 0x120dc03c5 WebCore::TaskDispatcher<WebCore::Timer>::sharedTimerFired() 21 0x120dc4c61 WebCore::TaskDispatcher<WebCore::Timer>::sharedTimer()::$_1::operator()() const 22 0x120dc4c29 WTF::Detail::CallableWrapper<WebCore::TaskDispatcher<WebCore::Timer>::sharedTimer()::$_1, void>::call() 23 0x11d8110fa WTF::Function<void ()>::operator()() const 24 0x11d8c9ee9 WebCore::Timer::fired() 25 0x120e082ea WebCore::ThreadTimers::sharedTimerFiredInternal() 26 0x120e0fec1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 27 0x120e0fe79 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 28 0x11d8110fa WTF::Function<void ()>::operator()() const 29 0x120dd5ff7 WebCore::MainThreadSharedTimer::fired() 30 0x120e6a486 WebCore::timerFired(__CFRunLoopTimer*, void*) 31 0x7fff4f3805d5 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__
Attachments
Patch
(1.74 KB, patch)
2020-03-26 13:20 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(1.77 KB, patch)
2020-03-26 13:25 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-03-26 13:16:32 PDT
<
rdar://problem/60541294
>
Chris Dumez
Comment 2
2020-03-26 13:20:25 PDT
Created
attachment 394650
[details]
Patch
Chris Dumez
Comment 3
2020-03-26 13:25:28 PDT
Created
attachment 394653
[details]
Patch
EWS
Comment 4
2020-03-26 14:36:41 PDT
Committed
r259081
: <
https://trac.webkit.org/changeset/259081
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394653
[details]
.
Ryosuke Niwa
Comment 5
2020-03-26 14:45:37 PDT
Could you also take a look at
https://bugs.webkit.org/show_bug.cgi?id=208798
?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug