[StressGC] ASSERTION FAILED: m_wrapper under WebCore::HTMLMediaElement::dispatchEvent https://bugs.webkit.org/show_bug.cgi?id=209616 <rdar://problem/60541294>

Reviewed by Saam Barati.

HTMLMediaElement::hasPendingActivity() should return true if there are pending tasks on
m_playbackTargetIsWirelessQueue since the tasks we enqueue there dispatch events.

No new tests, covered by media/modern-media-controls/placard-support/placard-support-airplay.html.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::hasPendingActivity const):


Canonical link: https://commits.webkit.org/222554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259081 268f45cc-cd09-0410-ab3c-d52691b4dbfc